@@ -123,12 +123,12 @@ class WC_Payments_Action_Scheduler_Service {
 	 *
 	 * @return void
 	 */
-	public function schedule_job( $timestamp, $hook, $args = [], $group = self::GROUP_ID ) {
+	public function schedule_job( int $timestamp, string $hook, array $args = [], string $group = self::GROUP_ID ) {
 		// Unschedule any previously scheduled instances of this particular job.
-		as_unschedule_action( $hook, $args, self::GROUP_ID );
+		as_unschedule_action( $hook, $args, $group );
 
 		// Schedule the job.
-		as_schedule_single_action( $timestamp, $hook, $args, self::GROUP_ID );
+		as_schedule_single_action( $timestamp, $hook, $args, $group );
 	}
 
 	/**
@@ -138,7 +138,7 @@ class WC_Payments_Action_Scheduler_Service {
 	 *
 	 * @return bool
 	 */
-	public function pending_action_exists( $hook ): bool {
+	public function pending_action_exists( string $hook ): bool {
 		$actions = as_get_scheduled_actions(
 			[
 				'hook'   => $hook,
