@@ -108,6 +108,7 @@ Please note that our support for the checkout block is still experimental and th
 * Update - display fees per payment method on overview page.
 * Fix - Multi-Currency settings rounding option and preview.
 * Fix - Payment failure on checkout block with UPE when phone number field is hidden
+* Update - Adds a scheduled action which makes updating the account cache more efficient
 * Add - Add compatibility between Multi-Currency and WooCommerce UPS shipping extension.
 * Add - Add compatibility between Multi-Currency and WooCommerce FedEx shipping extension.
 * Fix - Fix decimal error with shipping calculations with Multi-Currency.
