@@ -570,6 +570,11 @@ class WC_Payments_Account_Test extends WP_UnitTestCase {
 
 		// Assert that the "no account connected" special case is returned as expected.
 		$this->assertSame( [], $account );
+
+		// Test to check that scheduled action was not created.
+		$action_scheduler_service = new WC_Payments_Action_Scheduler_Service( $this->mock_api_client );
+		$action_hook              = WC_Payments_Account::ACCOUNT_CACHE_REFRESH_ACTION;
+		$this->assertNotTrue( $action_scheduler_service->pending_action_exists( $action_hook ) );
 	}
 
 	public function test_get_cached_account_data_handle_previous_account_retrieval_error() {
@@ -580,6 +585,11 @@ class WC_Payments_Account_Test extends WP_UnitTestCase {
 		$account = $this->wcpay_account->get_cached_account_data();
 
 		$this->assertFalse( $account );
+
+		// Test to check that scheduled action was not created.
+		$action_scheduler_service = new WC_Payments_Action_Scheduler_Service( $this->mock_api_client );
+		$action_hook              = WC_Payments_Account::ACCOUNT_CACHE_REFRESH_ACTION;
+		$this->assertNotTrue( $action_scheduler_service->pending_action_exists( $action_hook ) );
 	}
 
 	public function test_get_cached_account_data_refetches_when_cache_has_expired() {
@@ -615,6 +625,11 @@ class WC_Payments_Account_Test extends WP_UnitTestCase {
 
 		// Assert that we see the new account information instead of the cached information.
 		$this->assertSame( $updated_account, $account );
+
+		// Test to see if scheduled action was created.
+		$action_scheduler_service = new WC_Payments_Action_Scheduler_Service( $this->mock_api_client );
+		$action_hook              = WC_Payments_Account::ACCOUNT_CACHE_REFRESH_ACTION;
+		$this->assertTrue( $action_scheduler_service->pending_action_exists( $action_hook ) );
 	}
 
 	public function test_get_cached_account_data_handles_missing_account_key() {
@@ -647,6 +662,11 @@ class WC_Payments_Account_Test extends WP_UnitTestCase {
 
 		// Assert that we see the new account information instead of the cached information.
 		$this->assertSame( $updated_account, $account );
+
+		// Test to see if scheduled action was created.
+		$action_scheduler_service = new WC_Payments_Action_Scheduler_Service( $this->mock_api_client );
+		$action_hook              = WC_Payments_Account::ACCOUNT_CACHE_REFRESH_ACTION;
+		$this->assertTrue( $action_scheduler_service->pending_action_exists( $action_hook ) );
 	}
 
 	public function test_get_cached_account_data_handles_missing_expires_key() {
@@ -682,6 +702,11 @@ class WC_Payments_Account_Test extends WP_UnitTestCase {
 
 		// Assert that we see the new account information instead of the cached information.
 		$this->assertSame( $updated_account, $account );
+
+		// Test to see if scheduled action was created.
+		$action_scheduler_service = new WC_Payments_Action_Scheduler_Service( $this->mock_api_client );
+		$action_hook              = WC_Payments_Account::ACCOUNT_CACHE_REFRESH_ACTION;
+		$this->assertTrue( $action_scheduler_service->pending_action_exists( $action_hook ) );
 	}
 
 	public function test_handle_instant_deposits_inbox_note() {
